--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -68,6 +68,9 @@
 \fi % for pgf plots (added 12/14/2024)
 \makeatletter\@ifpackageloaded{underscore}{}{\usepackage[strings]{underscore}}\makeatother % for pgf plots (added 12/14/2024)
 \usepackage{layouts} % to print /textwidth
+
+\usepackage{comment} % for commenting (added 2/22/2025)
+% \includecomment{comment}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Commenting (by your supervisor)
