--- a/src/thesis_schneg/vis_descriptive_statistics.ipynb
+++ b/src/thesis_schneg/vis_descriptive_statistics.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +185,8 @@
     "##### set visualization configuration #####\n",
     "\n",
     "# save visualization or not\n",
-    "# save_vis: bool = False\n",
-    "save_vis: bool = True\n",
+    "save_vis: bool = False\n",
+    "# save_vis: bool = True\n",
     "\n",
     "# select dataset (if none is selected all datasets are visualized in a joint plot) \n",
     "dataset: DatasetName = None \n",
@@ -200,13 +200,13 @@
     "# cleaned_aol = True\n",
     "\n",
     "struc_level = []\n",
-    "# struc_level.append('queries')\n",
-    "# struc_level.append('named-entities')\n",
+    "struc_level.append('queries')\n",
+    "struc_level.append('named-entities')\n",
     "# struc_level.append('words')\n",
     "\n",
     "base_analyses = []\n",
     "# base_analyses.append('character-count-frequencies') #-{struc}\n",
-    "# base_analyses.append('word-count-frequencies')\n",
+    "base_analyses.append('word-count-frequencies')\n",
     "# base_analyses.append('entity-count-frequencies')\n",
     "\n",
     "analyses = []\n",
@@ -220,12 +220,13 @@
     "normalize_data = True\n",
     "# normalize_data = False\n",
     "\n",
-    "take_new_directory = True"
+    "# take_new_directory = True\n",
+    "take_new_directory = False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,31 +237,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-character-count-frequencies-words-special\n",
       "Loading data from aol dataset\n",
-      "aol loaded in 0.00039031902949015297 min\n",
+      "aol loaded in 0.00018432140350341797 min\n",
       "Loading data from aql dataset\n",
-      "aql loaded in 0.0005386590957641602 min\n",
+      "aql loaded in 0.08967314163843791 min\n",
       "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 0.00022002458572387696 min\n",
+      "ms-marco loaded in 0.00019780397415161132 min\n",
       "Loading data from orcas dataset\n",
-      "orcas loaded in 0.00022817055384318033 min\n",
-      "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-entity-count-frequencies-queries-special\n",
+      "orcas loaded in 0.00014368295669555664 min\n",
       "Loading data from aol dataset\n",
-      "aol loaded in 0.011558246612548829 min\n",
+      "aol loaded in 0.00011508862177530924 min\n",
       "Loading data from aql dataset\n",
-      "aql loaded in 0.030590645472208657 min\n",
+      "aql loaded in 0.0331348180770874 min\n",
       "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 0.014300970236460368 min\n",
+      "ms-marco loaded in 9.420315424601237e-05 min\n",
       "Loading data from orcas dataset\n",
-      "orcas loaded in 0.010534890492757161 min\n"
+      "orcas loaded in 8.446375528971354e-05 min\n"
      ]
     }
    ],
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,17 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Visualizing entity-count-frequencies-queries\n",
-      "[{'dataset-col-x': 'character-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Character per Word'}, {'dataset-col-x': 'entity-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Named Entity per Query'}]\n",
-      "Visualizing entity-count-frequencies-queries\n",
-      "[{'dataset-col-x': 'character-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [-1, 32.25], 'y-lim': None, 'title': 'Character per Word'}, {'dataset-col-x': 'entity-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Named Entity per Query'}]\n"
+      "Visualizing word-count-frequencies-named-entities\n",
+      "[{'dataset-col-x': 'word-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [0, 10], 'y-lim': None, 'title': 'Words per Query'}, {'dataset-col-x': 'word-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [0, 10], 'y-lim': None, 'title': 'Words per Named Entity'}]\n",
+      "Visualizing word-count-frequencies-named-entities\n",
+      "[{'dataset-col-x': 'word-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [-0.5, 7.25], 'y-lim': None, 'title': 'Words per Query'}, {'dataset-col-x': 'word-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [0, 10], 'y-lim': None, 'title': 'Words per Named Entity'}]\n"
      ]
     }
    ],
@@ -352,25 +351,28 @@
     "import matplotlib\n",
     "import scienceplots\n",
     "\n",
-    "# analyses_params = []\n",
+    "# save_vis: bool = False\n",
+    "save_vis: bool = True\n",
     "\n",
-    "# for item in base_analyses:\n",
-    "#     for struc in struc_level:\n",
-    "#         if struc == 'queries':\n",
-    "#             sub_title = \"Query\"\n",
-    "#         elif struc == 'named-entities':\n",
-    "#             sub_title = \"Named Entity\"\n",
-    "#         elif struc == 'words':\n",
-    "#             sub_title = \"Word\"\n",
+    "analyses_params = []\n",
     "\n",
-    "#         # load visualization parametes into dictionary\n",
-    "#         if f\"{item}-{struc}\" == f'character-count-frequencies-{struc}':\n",
-    "#             vis_params = {\"dataset-col-x\": \"character-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Characters per {sub_title}\"}\n",
-    "#         elif f\"{item}-{struc}\" == f'word-count-frequencies-{struc}':\n",
-    "#             vis_params = {\"dataset-col-x\": \"word-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Words per {sub_title}\"}\n",
-    "#         elif f\"{item}-{struc}\" == f'entity-count-frequencies-{struc}':\n",
-    "#             vis_params = {\"dataset-col-x\": \"entity-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Named Entities per {sub_title}\"}\n",
-    "#         analyses_params.append(vis_params)\n",
+    "for item in base_analyses:\n",
+    "    for struc in struc_level:\n",
+    "        if struc == 'queries':\n",
+    "            sub_title = \"Query\"\n",
+    "        elif struc == 'named-entities':\n",
+    "            sub_title = \"Named Entity\"\n",
+    "        elif struc == 'words':\n",
+    "            sub_title = \"Word\"\n",
+    "\n",
+    "        # load visualization parametes into dictionary\n",
+    "        if f\"{item}-{struc}\" == f'character-count-frequencies-{struc}':\n",
+    "            vis_params = {\"dataset-col-x\": \"character-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Characters per {sub_title}\"}\n",
+    "        elif f\"{item}-{struc}\" == f'word-count-frequencies-{struc}':\n",
+    "            vis_params = {\"dataset-col-x\": \"word-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Words per {sub_title}\"}\n",
+    "        elif f\"{item}-{struc}\" == f'entity-count-frequencies-{struc}':\n",
+    "            vis_params = {\"dataset-col-x\": \"entity-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Named Entities per {sub_title}\"}\n",
+    "        analyses_params.append(vis_params)\n",
     "\n",
     "\n",
     "# latex rendering for matplotlib\n",
@@ -416,7 +418,7 @@
     "\n",
     "bar_width = 0.5 \n",
     "if dataset is None:\n",
-    "    fig, ax = plt.subplots(ncols=len(analyses), nrows=4, figsize=(width, 2*height))\n",
+    "    fig, ax = plt.subplots(ncols=len(analyses), nrows=4, figsize=(width, 2*height-0.2*height))\n",
     "else:\n",
     "    fig, ax = plt.subplots(ncols=1, nrows=1, figsize=(width, height))\n",
     "for i in range(len(analyses)):   \n",
@@ -505,7 +507,7 @@
     "        #     plt.show()\n",
     "\n",
     "if dataset is None:\n",
-    "    fig.supxlabel(analyses_params[0][\"x-label\"])\n",
+    "    fig.supxlabel(analyses_params[0][\"x-label\"], ha='center', va='center', y=0.033)\n",
     "    fig.supylabel(analyses_params[0][\"y-label\"])\n",
     "# make layout tight\n",
     "plt.tight_layout()\n",
@@ -759,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
